initial code on moving the common layout to abstract class. make product list work

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             />
 
         <GridView
-            android:id="@+id/categoryListView"
+            android:id="@+id/listView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:numColumns="2"/>
