--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/navigation_account"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_account" />
 
     <item
         android:id="@+id/navigation_home"
@@ -13,6 +13,6 @@
 
     <item
         android:id="@+id/navigation_sell"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_sell" />
 
 </menu>
