--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -148,5 +148,26 @@
             android:id="@+id/commentList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/addCommentLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add Comment:"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/addCommentText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textMultiLine"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:id="@+id/addCommentBtn"
+            android:text="Post comment" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
