--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -11,13 +11,30 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/productView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="#0000"
-            android:scaleType="fitXY"
-            app:srcCompat="@color/colorPrimary" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/bookmarkButton"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="15dp"/>
+
+            <ImageView
+                android:id="@+id/productView"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:background="#0000"
+                android:scaleType="fitXY"
+                android:layout_centerInParent="true"
+                android:gravity="center_vertical"
+                app:srcCompat="@color/colorPrimary" />
+        </RelativeLayout>
+
+
 
         <TextView
             android:id="@+id/productTitle"
@@ -39,6 +56,5 @@
             android:textColor="@color/cardview_dark_background"
             android:textSize="10sp"
             android:textStyle="bold" />
-
     </LinearLayout>
 </android.support.v7.widget.CardView>
