skeleton UI for sending message

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -74,6 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_columnWeight="8"
                     android:text="sampleUser"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"
                     app:layout_gravity="fill_horizontal" />
 
