showing of message works. fixed some bugs

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -7,7 +7,7 @@
     tools:context="tradeapp.ateneo.edu.tradeapp.MessageActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/commentList"
+        android:id="@+id/messageList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/textView6"
