--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -18,7 +18,7 @@
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/sendMessageText"
+        android:layout_above="@+id/sendMessageButton"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="97dp"
         android:text="Send Message"
@@ -29,14 +29,13 @@
         android:id="@+id/messageText"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_above="@+id/sendMessageText"
+        android:layout_above="@+id/sendMessageButton"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/commentList"
         android:ems="10"
         android:inputType="textMultiLine" />
 
     <Button
-        android:id="@+id/sendMessageText"
+        android:id="@+id/sendMessageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
