showing rating works

--- a/app/src/main/res/layout/activity_account_feedback.xml
+++ b/app/src/main/res/layout/activity_account_feedback.xml
@@ -39,5 +39,24 @@
         android:textSize="16sp"
         app:layout_gravity="fill_horizontal" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:paddingTop="25dp"
+        android:text="Rating:"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_gravity="fill_horizontal" />
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:stepSize="0.5"
+        android:isIndicator="true"/>
+
+
 </GridLayout>
 
