--- a/app/src/main/res/layout/activity_account_feedback.xml
+++ b/app/src/main/res/layout/activity_account_feedback.xml
@@ -1,78 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/tools"
-    android:id="@+id/gridView"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:columnCount="2"
-    android:orientation="horizontal"
-    android:paddingBottom="10sp">
+    android:layout_height="match_parent"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fillViewport="true">
 
+<android.support.percent.PercentRelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <agency.tango.android.avatarview.views.AvatarView
         android:id="@+id/userAvatar"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_columnSpan="2"
-        android:layout_gravity="center"
+        app:layout_heightPercent="15%"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:gravity="center_horizontal"
         bind:av_border_color="@android:color/white"
         bind:av_border_width="6dp"
-        bind:av_text_size_percentage="40" />
+        bind:av_text_size_percentage="40"
+        android:layout_above="@+id/mainLayout" />
+
+    <LinearLayout
+        android:id="@+id/mainLayout"
+        android:layout_width="match_parent"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        app:layout_heightPercent="65%">
+
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:bind="http://schemas.android.com/tools"
+            android:id="@+id/gridView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_vertical"
+            android:columnCount="2"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:text="Username:"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/usernameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="8"
+                android:textSize="16sp"
+                app:layout_gravity="fill_horizontal" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill_vertical"
+                android:gravity="center_vertical"
+                android:text="Rating:"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:paddingTop="25dp"
-        android:text="Username:"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_gravity="fill_horizontal" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_columnWeight="8">
 
-    <TextView
-        android:id="@+id/usernameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="8"
-        android:textSize="16sp"
-        app:layout_gravity="fill_horizontal" />
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    style="@style/Widget.AppCompat.RatingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-32dp"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:scaleX="0.75"
+                    android:scaleY="0.75" />
+            </RelativeLayout>
+        </GridLayout>
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:paddingTop="25dp"
-        android:text="Rating:"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_gravity="fill_horizontal" />
-
+        <ListView
+            android:id="@+id/feedbackList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_columnWeight="8">
-
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="-32dp"
-            android:isIndicator="true"
-            android:numStars="5"
-            android:scaleX="0.75"
-            android:scaleY="0.75" />
-    </RelativeLayout>
-
-    <ListView
-        android:id="@+id/feedbackList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_columnSpan="2"
-        android:columnCount="2" />
+        app:layout_heightPercent="20%"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/mainLayout"
+        android:id="@+id/footerLayout">
+        <LinearLayout
+            android:id="@+id/addFeedbackContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-</GridLayout>
+                <EditText
+                    android:id="@+id/addFeedbackText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Add Feedback"
+                    android:inputType="textMultiLine" />
 
+            </android.support.design.widget.TextInputLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RatingBar
+                    android:id="@+id/addFeedbackRatingBar"
+                    style="@style/Widget.AppCompat.RatingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="20dp" />
+
+                <Button
+                    android:id="@+id/addFeedbackButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="12dp"
+                    android:layout_toEndOf="@+id/addFeedbackRatingBar"
+                    android:text="Submit" />
+            </RelativeLayout>
+        </LinearLayout>
+    </RelativeLayout>
+</android.support.percent.PercentRelativeLayout>
+</ScrollView>
