--- a/app/src/main/res/layout/activity_account_feedback.xml
+++ b/app/src/main/res/layout/activity_account_feedback.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        app:layout_heightPercent="65%">
+        app:layout_heightPercent="63%">
 
         <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -94,12 +94,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        app:layout_heightPercent="20%"
+        app:layout_heightPercent="22%"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/mainLayout"
-        android:id="@+id/footerLayout">
+        android:id="@+id/addFeedbackContainer">
         <LinearLayout
-            android:id="@+id/addFeedbackContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -114,7 +113,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:hint="Add Feedback"
                     android:inputType="textMultiLine" />
 
             </android.support.design.widget.TextInputLayout>
