--- a/app/src/main/res/layout/activity_account_feedback.xml
+++ b/app/src/main/res/layout/activity_account_feedback.xml
@@ -127,7 +127,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginStart="20dp" />
+                    android:layout_marginStart="20dp"
+                    android:rating="5" />
 
                 <Button
                     android:id="@+id/addFeedbackButton"
