--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    style="@style/MainLayoutGridViewItem">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+<ImageView
+    android:id="@+id/categoryView"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:background="#0000"
+    android:scaleType="fitXY"
+    app:srcCompat="@color/colorPrimary"
+    />
 
-        <ImageView
-            android:id="@+id/categoryView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="#0000"
-            android:scaleType="fitXY"
-            app:srcCompat="@color/colorPrimary"
-            />
+<TextView
+    android:id="@+id/categoryName"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="TextView"
+    android:textAlignment="center"
+    android:textColor="@color/cardview_dark_background"
+    android:textSize="18sp"
+    android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/categoryName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textAlignment="center"
-            android:textColor="@color/cardview_dark_background"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+</LinearLayout>
