--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -1,60 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    style="@style/MainLayoutGridViewItem">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/bookmarkButton"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="15dp"/>
 
-            <Button
-                android:id="@+id/bookmarkButton"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="15dp"/>
-
-            <ImageView
-                android:id="@+id/productView"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:background="#0000"
-                android:scaleType="fitXY"
-                android:layout_centerInParent="true"
-                android:gravity="center_vertical"
-                app:srcCompat="@color/colorPrimary" />
-        </RelativeLayout>
+        <ImageView
+            android:id="@+id/productView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="#0000"
+            android:scaleType="fitXY"
+            android:layout_centerInParent="true"
+            android:gravity="center_vertical"
+            app:srcCompat="@color/colorPrimary" />
+    </RelativeLayout>
 
 
 
-        <TextView
-            android:id="@+id/productTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="productTitle"
-            android:textAlignment="center"
-            android:textColor="@color/cardview_dark_background"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/productTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="productTitle"
+        android:textAlignment="center"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/productDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="fill_horizontal"
-            android:text="productDetails"
-            android:textAlignment="center"
-            android:textColor="@color/cardview_dark_background"
-            android:textSize="10sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+    <TextView
+        android:id="@+id/productDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="fill_horizontal"
+        android:text="productDetails"
+        android:textAlignment="center"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="10sp"
+        android:textStyle="bold" />
+</LinearLayout>
