--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,9 +7,27 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="MainLayoutGridViewItem">
+    <style name="ContainerGeneralStyle">
         <item name="android:layout_margin">10dp</item>
         <item name="android:padding">10dp</item>
+    </style>
+    <style name="ContainerGeneralStyleSlim">
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:padding">5dp</item>
+    </style>
+    <style name="GridCellStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="GridCellValueStyle" parent="GridCellStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_gravity">fill_vertical</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
 </resources>
