--- a/app/src/main/res/layout/comment_card.xml
+++ b/app/src/main/res/layout/comment_card.xml
@@ -2,14 +2,17 @@
     xmlns:bind="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginBottom="10dp"
+    style="ContainerGeneralStyleSlim">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="4"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        style="ContainerGeneralStyleSlim">
 
         <agency.tango.android.avatarview.views.AvatarView
             android:id="@+id/commentAvatar"
