--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tradeapp.ateneo.edu.tradeapp.MessageActivity">
+    tools:context="tradeapp.ateneo.edu.tradeapp.MessageActivity"
+    style="@style/ContainerGeneralStyle">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messageList"
@@ -11,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/textView6"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="12dp" />
+        android:layout_marginBottom="12dp"
+        style="ContainerGeneralStyle"/>
 
 </RelativeLayout>
